GH-24 Implement @ConditionalOnK8SEnvironment annotation (#32)